content/_generated-doc/3.0/config/quarkus-jackson-jackson-build-time-config.adoc

:summaryTableId: quarkus-jackson-jackson-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-jackson-jackson-build-time-config_configuration]]link:#quarkus-jackson-jackson-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-jackson-jackson-build-time-config_quarkus.jackson.fail-on-unknown-properties]]`link:#quarkus-jackson-jackson-build-time-config_quarkus.jackson.fail-on-unknown-properties[quarkus.jackson.fail-on-unknown-properties]`

[.description]
--
If enabled, Jackson will fail when encountering unknown properties. 
You can still override it locally with `@JsonIgnoreProperties(ignoreUnknown = false)`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACKSON_FAIL_ON_UNKNOWN_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACKSON_FAIL_ON_UNKNOWN_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-jackson-jackson-build-time-config_quarkus.jackson.fail-on-empty-beans]]`link:#quarkus-jackson-jackson-build-time-config_quarkus.jackson.fail-on-empty-beans[quarkus.jackson.fail-on-empty-beans]`

[.description]
--
If enabled, Jackson will fail when no accessors are found for a type. This is enabled by default to match the default Jackson behavior.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACKSON_FAIL_ON_EMPTY_BEANS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACKSON_FAIL_ON_EMPTY_BEANS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-jackson-jackson-build-time-config_quarkus.jackson.write-dates-as-timestamps]]`link:#quarkus-jackson-jackson-build-time-config_quarkus.jackson.write-dates-as-timestamps[quarkus.jackson.write-dates-as-timestamps]`

[.description]
--
If enabled, Jackson will serialize dates as numeric value(s). When disabled, they are serialized in ISO 8601 format.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACKSON_WRITE_DATES_AS_TIMESTAMPS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACKSON_WRITE_DATES_AS_TIMESTAMPS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-jackson-jackson-build-time-config_quarkus.jackson.write-durations-as-timestamps]]`link:#quarkus-jackson-jackson-build-time-config_quarkus.jackson.write-durations-as-timestamps[quarkus.jackson.write-durations-as-timestamps]`

[.description]
--
If enabled, Jackson will serialize durations as numeric value(s). When disabled, they are serialized in ISO 8601 format. This is enabled by default to match the default Jackson behavior.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACKSON_WRITE_DURATIONS_AS_TIMESTAMPS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACKSON_WRITE_DURATIONS_AS_TIMESTAMPS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-jackson-jackson-build-time-config_quarkus.jackson.accept-case-insensitive-enums]]`link:#quarkus-jackson-jackson-build-time-config_quarkus.jackson.accept-case-insensitive-enums[quarkus.jackson.accept-case-insensitive-enums]`

[.description]
--
If enabled, Jackson will ignore case during Enum deserialization.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACKSON_ACCEPT_CASE_INSENSITIVE_ENUMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACKSON_ACCEPT_CASE_INSENSITIVE_ENUMS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-jackson-jackson-build-time-config_quarkus.jackson.timezone]]`link:#quarkus-jackson-jackson-build-time-config_quarkus.jackson.timezone[quarkus.jackson.timezone]`

[.description]
--
If set, Jackson will default to using the specified timezone when formatting dates. Some examples values are "Asia/Jakarta" and "GMT{plus}3". If not set, Jackson will use its own default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACKSON_TIMEZONE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACKSON_TIMEZONE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/ZoneId.html[ZoneId]
 
|`UTC`


a|icon:lock[title=Fixed at build time] [[quarkus-jackson-jackson-build-time-config_quarkus.jackson.serialization-inclusion]]`link:#quarkus-jackson-jackson-build-time-config_quarkus.jackson.serialization-inclusion[quarkus.jackson.serialization-inclusion]`

[.description]
--
Define which properties of Java Beans are to be included in serialization.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACKSON_SERIALIZATION_INCLUSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACKSON_SERIALIZATION_INCLUSION+++`
endif::add-copy-button-to-env-var[]
-- a|
`always`, `non-null`, `non-absent`, `non-empty`, `non-default`, `custom`, `use-defaults` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-jackson-jackson-build-time-config_quarkus.jackson.property-naming-strategy]]`link:#quarkus-jackson-jackson-build-time-config_quarkus.jackson.property-naming-strategy[quarkus.jackson.property-naming-strategy]`

[.description]
--
Defines how names of JSON properties ("external names") are derived from names of POJO methods and fields ("internal names"). The value can be one of the one of the constants in `com.fasterxml.jackson.databind.PropertyNamingStrategies`, so for example, `LOWER_CAMEL_CASE` or `UPPER_CAMEL_CASE`. The value can also be a fully qualified class name of a `com.fasterxml.jackson.databind.PropertyNamingStrategy` subclass.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JACKSON_PROPERTY_NAMING_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JACKSON_PROPERTY_NAMING_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===